resolving layout issues

--- a/src/assets/styles/_placehoders.scss
+++ b/src/assets/styles/_placehoders.scss
@@ -1,6 +1,8 @@
 %w100_h100 {
   width: 100%;
   min-height: 100vh;
+  height: 100vh;
+  // height: 100%;
 }
 
 %flex_center {
