--- a/src/layouts/LoginLayout/login-layout.module.scss
+++ b/src/layouts/LoginLayout/login-layout.module.scss
@@ -7,31 +7,32 @@
   overflow: hidden;
   @extend %flex_center;
   position: relative;
+
   .rightSection {
     opacity: 0;
     height: 0px;
     margin-right: -100%;
     animation: fadeIn 0.6s forwards ease-out 0.3s;
-    background: conic-gradient(
-      from 225.87deg at 57.92% 44.38%,
-      #052224 -0.48deg,
-      rgba(18, 81, 85, 0.91) 302.64deg,
-      #052224 359.52deg,
-      rgba(18, 81, 85, 0.91) 662.64deg
-    );
+    background: conic-gradient(from 225.87deg at 57.92% 44.38%,
+        #052224 -0.48deg,
+        rgba(18, 81, 85, 0.91) 302.64deg,
+        #052224 359.52deg,
+        rgba(18, 81, 85, 0.91) 662.64deg);
     border-radius: 50px 0px 0px 50px;
     flex-grow: 1;
     min-width: 700px;
     display: flex;
     flex-direction: column;
     align-items: end;
-    > img {
+
+    >img {
       margin: 30px 30px 0px;
       width: 120px;
       height: 70px;
       align-self: self-start;
     }
-    > p {
+
+    >p {
       align-self: center;
       font-size: 32px;
       color: white;
@@ -41,12 +42,14 @@
       flex-grow: 1;
       text-shadow: 2px 7px 5px rgba(0, 0, 0, 0.3),
         0px -4px 10px rgba(255, 255, 255, 0.3);
+
       span {
         color: #47aeb3;
       }
     }
   }
-  > img {
+
+  >img {
     position: fixed;
     top: 10px;
     left: 20px;
@@ -57,7 +60,7 @@
 
 @keyframes fadeIn {
   to {
-    height: 100%;
+    height: 100vh;
     margin-right: 0;
     opacity: 1;
   }
